templates/style/_navbar.scss
// FIXME: Use modules
@import "vars", "utils";

.pure-g [class*="pure-u"] {
    font-family: $font-family-sans;
    color: var(--color-standard);
}

div.nav-container {
    // Nothing is supposed to be over or hovering the top navbar. Maybe add a few others '('? :)
    z-index: 999;
    height: $top-navbar-height;
    border-bottom: 1px solid var(--color-border);
    background-color: var(--color-background);
    left: 0;
    right: 0;
    top: 0;
    position: fixed;
    color: var(--color-navbar-standard);
    font-family: $font-family-sans;

    li {
        border-left: 1px solid var(--color-border);
    }

    .pure-menu-has-children > .pure-menu-link {
        background-color: var(--color-background);

        &:hover {
            background-color: var(--color-background);
        }
        &:after {
            font-size: 0.8em;
        }
    }

    .pure-menu-link {
        font-size: 0.8em;
        font-weight: 400;
        color: var(--color-navbar-standard);

        &:hover {
            color: var(--color-standard);
            background-color: inherit;
        }

        &.crate-name {
            text-overflow: ellipsis;
            overflow: hidden;
            max-width: 200px;
        }
    }

    .pure-menu-right {
        float: right;
    }

    form.landing-search-form-nav {
        max-width: 1200px;

        #search-input-nav {
            float: right;
            max-width: 150px;
            display: none;
            border-left: 1px solid var(--color-border);

            @media #{$media-sm} {
                display: block;
            }

            @media #{$media-md} {
                max-width: 200px;
            }

            label {
                color: var(--color-navbar-standard);
                cursor: pointer;
                padding-left: 0.5rem;
                font-size: 0.8em;
            }

            input {
                border: none;
                margin: 0 1em 0 0;
                font-size: 0.8em;
                box-shadow: none;
                background-color: var(--color-background);
                height: 31px;
            }
        }

        input.search-input-nav:focus {
            outline: unset;
        }
    }

    .pure-menu-children {
        border: 1px solid var(--color-border);
        border-radius: 0 0 2px 2px;
        margin-left: -1px;
        background-color: var(--color-background);

        li {
            border-left: none;
        }
    }

    // used for latest version warning
    .warn,
    .warn:hover {
        color: var(--color-warn);
    }

    a.warn:hover {
        color: var(--color-warn-hover);
    }

    // used for global alerts
    .error {
        color: var(--color-error);

        &:hover {
            color: var(--color-error-hover);
        }
    }

    // use a .title span inside a menu to hide it on small screens
    span.title {
        display: none;
        @media screen and (min-width: 872px) {
            display: inline;
        }
    }

    .pure-menu-right span.title {
        @media screen and (min-width: 872px) {
            display: none;
        }
        @media screen and (min-width: 965px) {
            display: inline;
        }
    }

    form.landing-search-form-nav.not-latest {
        span.title {
            display: none;
            @media screen and (min-width: 973px) {
                display: inline;
            }
        }

        .pure-menu-right span.title {
            @media screen and (min-width: 973px) {
                display: none;
            }
            @media screen and (min-width: 1125px) {
                display: inline;
            }
        }
    }

    // Make menu item optional and disappear on small screens
    .pure-menu-opt {
        display: none;
        @media #{$media-sm} {
            display: inline-block;
        }
    }

    // Make children of menu optional and disappear on small screens
    .pure-menu-opt-children {
        > .pure-menu-link::after {
            display: none;
            @media #{$media-sm} {
                display: inline;
            }
        }

        &.pure-menu-allow-hover:hover > .pure-menu-children,
        &.pure-menu-active > .pure-menu-children {
          display: none;
          @media #{$media-sm} {
              display: block;
          }
        }
    }

    div.package-details-menu {
        width: 350px;

        p.description {
            font-family: $font-family-sans;
            font-size: 0.8em;
            color: var(--color-navbar-standard);
            padding: 0.5em 1em;
            margin: 0;
        }

        ul.pure-menu-list {
            width: 100%;
        }

        div.right-border {
            border-right: 1px solid var(--color-border);
        }

        a.pure-menu-link {
            word-wrap: normal;
            white-space: normal;
        }

        div.sub-menu {
            max-height: 150px;
            overflow-y: auto;

            ul.pure-menu-list {
                border-top: none;
            }

            li.pure-menu-item:last-child {
                border-bottom: none;
            }
        }
    }
}

#nav-search {
    color: var(--color-navbar-standard);
}

body {
    // Since top navbar is fixed, we need to add padding to the body content.
    padding-top: $top-navbar-height !important;

    // The scroll padding on the <body> is necessary for Chrome
    // browsers for now (see
    // https://css-tricks.com/fixed-headers-on-page-links-and-overlapping-content-oh-my/
    // for an explanation)
    scroll-padding-top: $top-navbar-height;
}

html {
    // Offset anchor jump targets down by this much, so they don't
    // overlap the top navigation bar (not supported on Desktop/Mobile
    // Safari yet):
    scroll-padding-top: $top-navbar-height;
}

.menu-item-divided {
    border-bottom: 1px solid var(--color-border);
}

.pure-menu-list > li.pure-menu-heading {
    color: var(--color-standard);
}

i.dependencies.normal {
    visibility: hidden;
    display: none;
}

